--- a/src/main/resources/templates/board/showAll.html
+++ b/src/main/resources/templates/board/showAll.html
@@ -17,6 +17,9 @@
             <table id="table-board" class="table table-striped table-hover table-dark">
                 <thead>
                 <tr>
+                    <td colspan="2"/>
+                </tr>
+                <tr>
                     <td>글 번호</td>
                     <td>제목</td>
                     <td>작성자</td>
