--- a/src/main/resources/templates/board/showOne.html
+++ b/src/main/resources/templates/board/showOne.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- include summernote css/js -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote.min.js"></script>
     <script src="/js/board/showOne.js"></script>
 </head>
 <body>
 <div class="container">
-    <div class="row mt-5 justify-content-center align-items-center">
-        <div class="col-10 text center">
+    <div class="row justify-content-center mt-5 align-items-center">
+        <div class="col-10 text-center">
             <table class="table table-hover table-striped table-error">
                 <tr>
                     <td>제목</td>
@@ -37,6 +42,30 @@
                 <tr>
                     <td colspan="2" id="td-content"></td>
                 </tr>
+                <tr>
+                    <td colspan="2">
+                        <button id="btn-update-board" class="btn btn-info">수정</button>
+                        <button id="btn-delete-board" class="btn btn-danger">삭제</button>
+                    </td>
+                </tr>
+            </table>
+            <hr>
+            <table id="table-reply"
+                   class="table table-border table-striped table-hover table-secondary text-center justify-content-center">
+                <thead>
+                <tr>
+                    <td colspan="5">댓글 목록</td>
+                </tr>
+                <tr>
+                    <td><input type="text" id="input-new-reply" class="form-control"/></td>
+                    <td>
+                        <button class="btn btn-outline-primary" id="btn-insert-reply">댓글 입력</button>
+                    </td>
+                </tr>
+                </thead>
+                <tbody id="tbody-reply">
+
+                </tbody>
             </table>
         </div>
     </div>
